[package]
name = "licencjat"
version = "0.1.0"
edition = "2021"

[dependencies]
rand="0.8.5"
ndarray = "0.16.1"
csv = "1.1"
polars = { version = "0.45.1", features = ["csv"] }  # Dla pracy z DataFrame
polars-io = "0.45.1"
polars-core = "0.45.1"
polars-lazy = { version = "0.45.1", features = ["csv"] }
plotters="0.3.7"